mahou_shoujo.yml

--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -3,7 +3,7 @@
   neko_id: mahou_shoujo
   level: 1
   algo: count
-  threshold: 6%
+  threshold: 30
   filters:
     anime_ids:
       - 100
@@ -496,7 +496,7 @@
 
 - <<: *defaults
   level: 2
-  threshold: 9%
+  threshold: 45
   metadata:
     title_ru: Магия — второе имя
     text_ru: Не важно, какой ваш пол и сколько вам лет, если ваше призвание — нести любовь и справедливость.
@@ -507,7 +507,7 @@
 
 - <<: *defaults
   level: 3
-  threshold: 15%
+  threshold: 70
   metadata:
     title_ru: Все враги побеждены
     text_ru: Опасность миновала! Можно возвращаться к семье и школьным друзьям.
@@ -518,7 +518,7 @@
 
 - <<: *defaults
   level: 4
-  threshold: 30%
+  threshold: 145
   metadata:
     title_ru: Настоящее волшебство?
     text_ru: Вашим силам теперь подвластно само мироздание.
