--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -5811,58 +5811,83 @@
   algo: duration
   filters: *597
   threshold: 0.01
-  metadata: *597
+  metadata: *598
 - neko_id: dr_stone
   level: 1
   algo: duration
-  filters:
+  filters: &599
     franchise: dr_stone
     not_anime_ids:
-    - 43555
     - 43349
-  threshold: 100%
-  metadata:
+    - 43555
+    - 55216
+  threshold: 95.2%
+  metadata: &600
     title_ru: Доктор Стоун
     title_en: Dr. Stone
-    image: https://shikimori.me/system/user_images/original/498922/2021942.jpg
+    image: "/assets/achievements/anime/franchise/dr_stone.jpg"
     topic_id: 247360
+- neko_id: dr_stone
+  level: 0
+  algo: duration
+  filters: *599
+  threshold: 0.01
+  metadata: *600
 - neko_id: mahoyome
   level: 1
   algo: duration
-  filters:
+  filters: &601
     franchise: mahoyome
     not_anime_ids:
+    - 35062
+    - 36501
     - 37031
     - 40134
-    - 36501
-    - 35062
   threshold: 100%
-  metadata:
+  metadata: &602
     title_ru: Невеста чародея
     title_en: Mahoutsukai no Yome
-    image: https://shikimori.me/system/user_images/original/34807/2283697.jpg
+    image: "/assets/achievements/anime/franchise/mahoyome.jpg"
     topic_id: 247360
+- neko_id: mahoyome
+  level: 0
+  algo: duration
+  filters: *601
+  threshold: 0.01
+  metadata: *602
 - neko_id: konosuba
   level: 1
   algo: duration
-  filters:
+  filters: &603
     franchise: konosuba
-  threshold: 100%
-  metadata:
+  threshold: 98%
+  metadata: &604
     title_ru: Этот замечательный мир!
     title_en: KonoSuba
-    image: https://shikimori.me/system/user_images/original/607810/2201799.jpg
+    image: "/assets/achievements/anime/franchise/konosuba.jpg"
     topic_id: 247360
+- neko_id: konosuba
+  level: 0
+  algo: duration
+  filters: *603
+  threshold: 0.01
+  metadata: *604
 - neko_id: dragon_quest
   level: 1
   algo: duration
-  filters:
+  filters: &605
     franchise: dragon_quest
     not_anime_ids:
     - 49228
-  threshold: 100%
-  metadata:
+  threshold: 97.4%
+  metadata: &606
     title_ru: Драгон Квест
     title_en: Dragon Quest
-    image: https://shikimori.me/system/user_images/original/34807/2283801.jpg
+    image: "/assets/achievements/anime/franchise/dragon_quest.jpg"
     topic_id: 247360
+- neko_id: dragon_quest
+  level: 0
+  algo: duration
+  filters: *605
+  threshold: 0.01
+  metadata: *606
