--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -2036,6 +2036,9 @@
   algo: duration
   filters: &216
     franchise: quanzhi_fashi
+     not_anime_ids:
+    - 44627
+    - 44628
   threshold: 95%
   metadata: &217
     title_ru: Маг на полную ставку
