--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1714,7 +1714,6 @@
   filters: &183
     franchise: mahoyome
     not_anime_ids:
-    - 35062
     - 36501
     - 37031
     - 40134
@@ -1725,6 +1724,9 @@
     title_en: Mahoutsukai no Yome
     image: "/assets/achievements/anime/franchise/mahoyome.jpg"
     topic_id: 247360
+  generator:
+    not_ignored_ids:
+    - 35062
 - neko_id: mahoyome
   level: 0
   algo: duration
