--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -6095,3 +6095,62 @@
   filters: *625
   threshold: 0.01
   metadata: *626
+- neko_id: sonic
+  level: 1
+  algo: duration
+  filters:
+    franchise: sonic
+    not_anime_ids:
+    - 10263
+  threshold: 100%
+  metadata: 
+    title_ru: Соник
+    title_en: Sonic
+    image: https://desu.shikimori.one/system/user_images/original/34807/2427240.jpg
+    topic_id: 247360
+- neko_id: zhen_hun_jie
+  level: 1
+  algo: duration
+  filters:
+    franchise: zhen_hun_jie
+  threshold: 100%
+  metadata:
+    title_ru: Улица демонов
+    title_en: Zhen Hun Jie
+    image: https://desu.shikimori.one/system/user_images/original/45319/2426657.jpg
+    topic_id: 247360
+- neko_id: xia_lan
+  level: 1
+  algo: duration
+  filters:
+    franchise: xia_lan
+    not_anime_ids:
+    - 34129
+    - 44606
+  threshold: 100%
+  metadata:
+    title_ru: Портрет Цзянху
+    title_en: Hua Jianghu
+    image: https://desu.shikimori.one/system/user_images/original/607810/2240474.jpg
+    topic_id: 247360
+- neko_id: yoligongju_loopy
+  level: 1
+  algo: duration
+  filters:
+    franchise: yoligongju_loopy
+    not_anime_ids:
+    - 48250
+    - 56909
+    - 48245
+    - 36530
+    - 27465
+    - 27461
+    - 27467
+    - 6524
+    - 27453
+  threshold: 100%
+  metadata:
+    title_ru: Пингвинёнок Пороро
+    title_en: Porong Porong Pororo
+    image: https://desu.shikimori.one/system/user_images/original/34807/2427337.jpg
+    topic_id: 247360
