--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -1270,7 +1270,7 @@
     - 53754
     - 43760
   metadata: &74
-    title_ru: Мамору Оси
+    title_ru: Мамору Осии
     title_en: Mamoru Oshii
     image: "/assets/achievements/anime/author/mamoru_oshii.png"
     border_color: "#B22222"
