--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -21,12 +21,14 @@
     - 51241
     - 51618
     - 54468
-  threshold: 95%
+  threshold: 90.5%
   metadata: &2
     title_ru: Атака титанов
     title_en: Shingeki no Kyojin
     image: "/assets/achievements/anime/franchise/shingeki_no_kyojin.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 90.5%
 - neko_id: shingeki_no_kyojin
   level: 0
   algo: duration
@@ -630,12 +632,14 @@
   algo: duration
   filters: &66
     franchise: mushoku_tensei
-  threshold: 97.3%
+  threshold: 94.4%
   metadata: &67
     title_ru: Реинкарнация безработного
     title_en: Mushoku Tensei
     image: "/assets/achievements/anime/franchise/mushoku_tensei.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 94.4%
 - neko_id: mushoku_tensei
   level: 0
   algo: duration
@@ -668,12 +672,14 @@
     - 43349
     - 43555
     - 55216
-  threshold: 100%
+  threshold: 96.1%
   metadata: &71
     title_ru: Доктор Стоун
     title_en: Dr. Stone
     image: "/assets/achievements/anime/franchise/dr_stone.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 96.1%
 - neko_id: dr_stone
   level: 0
   algo: duration
@@ -992,12 +998,14 @@
     franchise: danganronpa
     not_anime_ids:
     - 37103
-  threshold: 100%
+  threshold: 97.3%
   metadata: &104
     title_ru: Данганронпа
     title_en: Danganronpa
     image: "/assets/achievements/anime/franchise/danganronpa.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 97.3%
 - neko_id: danganronpa
   level: 0
   algo: duration
@@ -1071,13 +1079,14 @@
     - 31448
     - 35631
     - 50097
-  threshold: 100%
+  threshold: 94.7%
   metadata: &113
     title_ru: Непутёвый ученик в школе магии
     title_en: Mahouka Koukou no Rettousei
     image: "/assets/achievements/anime/franchise/mahouka_koukou_no_rettousei.jpg"
     topic_id: 247360
   generator: &114
+    threshold: 94.7%
     ignore_latest_ids:
     - 48375
 - neko_id: mahouka_koukou_no_rettousei
@@ -1755,12 +1764,14 @@
     franchise: mushishi
     not_anime_ids:
     - 39738
-  threshold: 100%
+  threshold: 92.3%
   metadata: &187
     title_ru: Мастер муси
     title_en: Mushishi
     image: "/assets/achievements/anime/franchise/mushishi.png"
     topic_id: 247360
+  generator: 
+    threshold: 92.3%
 - neko_id: mushishi
   level: 0
   algo: duration
@@ -2546,12 +2557,14 @@
   algo: duration
   filters: &267
     franchise: rozen_maiden
-  threshold: 99.2%
+  threshold: 94.1%
   metadata: &268
     title_ru: Девы Розена
     title_en: Rozen Maiden
     image: "/assets/achievements/anime/franchise/rozen_maiden.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 94.1%
 - neko_id: rozen_maiden
   level: 0
   algo: duration
@@ -3213,12 +3226,14 @@
   algo: duration
   filters: &331
     franchise: kingdom
-  threshold: 100%
+  threshold: 98.5%
   metadata: &332
     title_ru: Царство
     title_en: Kingdom
     image: "/assets/achievements/anime/franchise/kingdom.jpg"
     topic_id: 247360
+  generator: 
+    threshold: 98.5%
 - neko_id: ginga_tetsudou
   level: 1
   algo: duration
@@ -5132,12 +5147,14 @@
     - 399
     - 1381
     - 39333
-  threshold: 100%
+  threshold: 97.5%
   metadata: &525
     title_ru: Звёздный герб
     title_en: Seikai no Monshou
     image: "/assets/achievements/anime/franchise/seikai_no_senki.png"
     topic_id: 247360
+  generator: 
+    threshold: 97.5%
 - neko_id: seikai_no_senki
   level: 0
   algo: duration
